@startuml

entity User{
    id : Integer PK
    username: CharField
    email: CharField
    password: CharField
}





entity EquipamientoDeLaboratorio{
    id : Integer PK
    nombre: CharField
    fabricante: CharField
    descripcion: CharField
    estado: CharField
    fecha_entrada: DateField
    calibracion: FloatField
}

entity EntradaDeReactivo{
    id : Integer PK
    fecha_entrada: DateField
    cantidad: FloatField
}

entity Reactivo{
    id : Integer PK
    nombre_del_reactivo: CharField
    cantidad_disponible: FloatField
    fecha_entrada: DateField
     descripcion: CharField
}

entity PrepararSoluciones {
    id : Integer PK
    fecha: DateTimeField
}

entity ReactivoConsumido {
    id : Integer PK
    cantidad: FloatField
}
entity SolucionesPreparadasProducida {
    id : Integer PK
    cantidad: FloatField
}

entity SolucionesPreparadas{
    id : Integer PK
    identifacion: CharField
    nombre: CharField
    cantidad: FloatField
}

entity Trabajador{
    id : Integer PK
    nombre: CharField
    CI: CharField
    rol_del_trabajador: CharField
}


entity Informe {
    id : Integer PK
    titulo_del_informe: CharField
    fecha_del_informe: DateTimeField
    descripcion: CharField
}

entity EnsayoDelCombustible{
    id : Integer PK
    nombre_ensayo: CharField
    result_determinacion_de_la_viscosidad: FloatField
    result_determinacion_de_la_temperatura_de_calentamiento: FloatField
    result_determinacion_del_valor_calorico: FloatField
    result_determinacion_de_la_gravedad_especifica
    fecha_ensayo: DateTimeField
    descripcion_de_resultados: TextField
}

entity EnsayoAguaVapor {
    id : Integer PK
    nombre_ensayo: CharField
    fecha_ensayo: DateTimeField
    descripcion_de_ensayo: TextField
}


PrepararSoluciones "*" -- "*" SolucionesPreparadasProducida
PrepararSoluciones "*" -- "*" ReactivoConsumido

PrepararSoluciones "*" -- "1" EnsayoAguaVapor
PrepararSoluciones "*" -- "1" EnsayoDelCombustible
Trabajador "*" -- "*" EnsayoAguaVapor
Trabajador "*" -- "*" EnsayoDelCombustible

ReactivoConsumido "*" -- "1" Reactivo
SolucionesPreparadas "1" -- "*" SolucionesPreparadasProducida


Informe "1" -- "1" EnsayoDelCombustible
Informe "1" -- "1" EnsayoAguaVapor
Informe "*" -- "*" Trabajador


EntradaDeReactivo "*" -- "1" Reactivo


@enduml